RESOLVED FIXED74239
REGRESSION (r80438): First word on a line or after collapsed space may not be hyphenated even though it should
https://bugs.webkit.org/show_bug.cgi?id=74239
Summary REGRESSION (r80438): First word on a line or after collapsed space may not be...
mitz
Reported 2011-12-10 11:09:12 PST
REGRESSION (r80438): First word on a line or after collapsed space may not be hyphenated even though it should
Attachments
Check whether the first character of the prefix before the hyphen is a space when deciding if the prefix is long enough (6.73 KB, patch)
2011-12-10 11:16 PST, mitz
andersca: review+
mitz
Comment 1 2011-12-10 11:10:55 PST
mitz
Comment 2 2011-12-10 11:16:35 PST
Created attachment 118693 [details] Check whether the first character of the prefix before the hyphen is a space when deciding if the prefix is long enough
mitz
Comment 3 2011-12-11 11:07:14 PST
Ryosuke Niwa
Comment 4 2011-12-12 16:56:40 PST
The test is failing on SL: http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r102627%20(35418)/fast/text/hyphenate-limit-lines-pretty-diff.html Should we just rebaseline? The diff looks similar to the change you made.
mitz
Comment 5 2011-12-12 17:00:47 PST
(In reply to comment #4) > The test is failing on SL: > http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r102627%20(35418)/fast/text/hyphenate-limit-lines-pretty-diff.html > > Should we just rebaseline? The diff looks similar to the change you made. Yeah, the new results seem right.
Note You need to log in before you can comment on or make changes to this bug.